Fix Move assistant button right margin on mobile https://github.com/Siderite/lichessTools/issues/1679

--- a/tools/moveAssistant/tool.css
+++ b/tools/moveAssistant/tool.css
@@ -51,6 +51,7 @@ body.lichessTools div.lichessTools-moveListOptions-header {
   flex-wrap: wrap;
   max-height: 2em;
   gap: 1em;
+  padding-right: 0.5em;
 }
 
 body.lichessTools.mobile div.lichessTools-moveListOptions-header {
